--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.13.0",
+		"@supabase/supabase-js": "^2.43.4",
+		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.390.0",
+		"svelte-french-toast": "^1.2.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
