--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/auth-helpers-sveltekit": "^0.13.0",
+		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.4",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
