--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-js": "^2.64.2",
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.4",
 		"bits-ui": "^0.21.10",
